# oit_minibot_middle_02

./: .gitignore  CMakeLists.txt  README.md  check_unused_images.py  install.sh  install_japanese_tts.sh  install_launchers.sh  install_ydlidar.sh  package.xml
config/: joy.yaml  laser_filter.yaml  roboclaw.yaml
config/rviz/: mapping.rviz  navigation.rviz  simple.rviz
desktop/: oit_capture.desktop  oit_devices.desktop  oit_mapping.desktop  oit_navigation.desktop  oit_record_rosbag.desktop  oit_ros_python.desktop  oit_ros_python2.desktop  oit_save_map.desktop  oit_stage_navigation.desktop  oit_stop_all.desktop  oit_teleop.desktop
docs/: camera_capture.md  dual_monitor.md  file.md  install.md  install_tools.md  navigation.md  power_off.md  power_on.md  samples.md  simulation.md  slam.md  structure.md  teleop.md  update.md  wifi.md
launch/: record_rosbag.launch
launch/include/: amcl.launch  camera.launch  devices.launch  pi_camera.launch  roboclaw.launch  rviz.launch  stage.launch  state_publisher.launch  teleop_select.launch  tts.launch  ydlidar.launch
launch/real/: mapping.launch  (+2 more)
maps/: make_stage_world.sh
samples/: simple_get_pose.py  simple_image_processing.py  simple_move.py  simple_navigation.py
scripts/: autopep8.sh  devices.sh  exec_python.sh  image_capture.py  image_capture.sh  image_flip.py  mapping.sh  navigation.sh  pi_camera.py  record_rosbag.sh  save_map.sh  select_map.py  settings.sh.template  stage_navigation.sh  stop_all.sh  stop_recording.sh  teleop.sh  tts_bridge.py
urdf/: check_urdf.sh  check_urdf_rviz.sh  minibot_middle_02.xacro
(+12 files in other folders)
