<?xml version="1.0"?>
<package format="2">
  <name>oit_minibot_middle_02</name>
  <version>1.0.0</version>
  <description>The oit_minibot_middle_02 package</description>
  <maintainer email="5770105+KMiyawaki@users.noreply.github.com">K.Miyawaki</maintainer>
  <license>BSD</license>
  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/oit_minibot_middle_02</url> -->

  <author email="5770105+KMiyawaki@users.noreply.github.com">K.Miyawaki</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <export>
  </export>
</package>
